force-app/main/default/objects/SaiMar30Obj2__c/SaiMar30Obj2__c.object-meta.xml
<CustomObject>
    <label>SaiMar30Obj2</label>
    <nameField>
        <label>SaiMar30Obj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaiMar30Obj2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>