force-app/main/default/objects/SaiMar30Obj2__c/fields/Obj1f2__c.field-meta.xml
<CustomField>
    <fullName>Obj1f2__c</fullName>
    <label>Obj1f2</label>
    <length>7</length>
    <type>Text</type>
</CustomField>