force-app/main/default/objects/SaiMar30Obj2__c/fields/Obj2pr2__c.field-meta.xml
<CustomField>
    <fullName>Obj2pr2__c</fullName>
    <label>Obj2pr2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test1</valueSetName>
    </valueSet>
</CustomField>