force-app/main/default/objects/SaiMar30Obj2__c/recordTypes/RC1.recordType-meta.xml
<RecordType>
    <fullName>RC1</fullName>
    <active>true</active>
    <description>test</description>
    <label>RC1</label>
</RecordType>