force-app/main/default/objects/SaiMar30Obj2__c/recordTypes/RC2.recordType-meta.xml
<RecordType>
    <fullName>RC2</fullName>
    <active>true</active>
    <label>RC2</label>
</RecordType>